clusters/home/internal/ocis/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ocis-https
  namespace: home
spec:
  tls:
    insecureSkipVerify: true
