clusters/home/internal/ocis/ocis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocis
  template:
    metadata:
      labels:
        app: ocis
    spec:
      containers:
        - name: ocis
          image: owncloud/ocis:7.3.1
          args: ["server"]
          ports:
            - name: http
              containerPort: 9200
          volumeMounts:
            - name: config
              mountPath: /etc/ocis
            - name: data
              mountPath: /var/lib/ocis
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ocis-config
        - name: data
          persistentVolumeClaim:
            claimName: ocis-data
---
apiVersion: v1
kind: Service
metadata:
  name: ocis
spec:
  selector:
    app: ocis
  ports:
    - port: 443
      targetPort: 9200
